--- a/CapNCrunchEngineSCHOOL/CapNCrunchEngineSCHOOL.vcxproj.filters
+++ b/CapNCrunchEngineSCHOOL/CapNCrunchEngineSCHOOL.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\external\directxtex\DDSTextureLoader\DDSTextureLoader11.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Light.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphicsEngine.h">
@@ -56,6 +59,12 @@
     <ClInclude Include="..\external\directxtex\DDSTextureLoader\DDSTextureLoader11.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="ColorPS.hlsl">
@@ -64,8 +73,10 @@
     <FxCompile Include="ColorVS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
-    <FxCompile Include="CoolsinwavePS.hlsl">
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ShaderCommon.hlsli">
       <Filter>Shaders</Filter>
-    </FxCompile>
+    </None>
   </ItemGroup>
 </Project>
