Fixed rendertargets, plane and started with creating and binding the rendertarget. PS: DOESNT WORK RIGHT NOW

--- a/CapNCrunchEngineSCHOOL/CapNCrunchEngineSCHOOL.vcxproj
+++ b/CapNCrunchEngineSCHOOL/CapNCrunchEngineSCHOOL.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Primitive.cpp" />
+    <ClCompile Include="RenderTarget.h" />
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
